SFDC Automation/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>IF( ISBLank(TEXT(Contact.Account.Account_Classification__c)) ,  TEXT(Lead.Customer_Account__r.Account_Classification__c) 
,TEXT(Contact.Account.Account_Classification__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF(ISBLank(TEXT(Contact.Account.Type )) , 
 TEXT(  Lead.Customer_Account__r.Type  ) 
,TEXT( Contact.Account.Type))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(ISBLank( Contact.Account.RecordType.Name) ,  
 Lead.Customer_Account__r.RecordType.Name , 
 Contact.Account.RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Classification__c</fullName>
        <formula>IF( INCLUDES(Account_Name__r.Additional_Classifications__c , &quot;Enterprise Account&quot;), &quot;Enterprise Account, &quot;, &quot; &quot;)
&amp;
IF( INCLUDES(Account_Name__r.Additional_Classifications__c , &quot;Growth Account&quot;), &quot;Growth Account, &quot;, &quot; &quot;)
&amp;
IF( INCLUDES(Account_Name__r.Additional_Classifications__c , &quot;MWBE&quot;), &quot;MWBE, &quot;, &quot; &quot;)
&amp;
IF( INCLUDES(Account_Name__r.Additional_Classifications__c , &quot;National Tag Team&quot;), &quot;National Tag Team, &quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <formula>Account_Name__r.AnnualRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <formula>Account_Name__r.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the respective BDM/DBD for tracking and reporting</description>
        <label>Field Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Ownership_Type__c</fullName>
        <formula>TEXT( Account_Name__r.Fleet_Ownership_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Ownership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Customer__c</fullName>
        <formula>Account_Name__r.FormerCustomer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Former Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lessee_Number__c</fullName>
        <formula>Account_Name__r.LesseeNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lessee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_By__c</fullName>
        <label>Managed By</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NTT_Status__c</fullName>
        <label>NTT Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review Next Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided to no longer contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed by Field Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Used to provide the overview of the current state of the prospect</description>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>IF( ISBLank(Contact.Owner.Region__c) ,  Lead.Owner:User.Region__c , Contact.Owner.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospecting_Status__c</fullName>
        <formula>CASE(  Account_Name__r.Prospecting_Status__c , 
       &quot;Actively Pursuing&quot;, &quot;Actively Pursuing&quot;, 
       &quot;Not Actively Pursuing&quot;, &quot;Not Actively Pursuing&quot;, 
       &quot;Suspect&quot;, &quot;Suspect&quot;, 
       &quot;Will Never Pursue&quot;, &quot;Will Never Pursue&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospecting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Anniversary_Date__c</fullName>
        <formula>Account_Name__r.CO_RYDER_ANNSRY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ryder Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>Field_Sales_Rep__r.Sales_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telemarketing_Status__c</fullName>
        <label>Telemarketing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Agreed to No Longer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Meet Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound call 10 Attempts or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call Attempt 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Field Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreachable After Multiple Attempts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Prospect</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>